fixed spelling issue

--- a/blank-template.html
+++ b/blank-template.html
@@ -135,7 +135,7 @@
 
     
         <tr>
-            <th rowspan="1" colspan="2">Drawf Planets</th>   
+            <th rowspan="1" colspan="2">Dwarf Planets</th>   
             <td>Pluto</td>
             <td>0.0146</td>
             <td>2,370</td>
