--- a/blank-template.html
+++ b/blank-template.html
@@ -14,7 +14,11 @@
         </div>
       </div>
     
+    
 <table>
+    <div class="caption">
+        <p>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</p>
+</div>
     <tr>
         <th colspan="2"></th>
         <th>Name</th>
