adding the scrolling table

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="caption">
         <p>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</p>
 </div>
-    
+    <div style="overflow-x:auto;">
 <table>
    
     <tr>
@@ -156,6 +156,6 @@
    
 
 </table>
-
+</div>
   </body>
 </html>
