--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Table template</title>
+    <title>Ehi's Planetarium</title>
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
   </head>
   <body>
